<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrewc.tipcalculator2.MainActivity"
    android:useDefaultMargins="false"
    android:orientation="horizontal"
    android:columnCount="2"
    android:columnOrderPreserved="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/subtotal"
        android:id="@+id/subTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:id="@+id/subEditText"
        android:maxLength="12"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taxLinearLayout"
        android:layout_columnSpan="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tax"
            android:id="@+id/taxStringTextView"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/taxTextView"
            android:maxLength="13"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tax_rate"
            android:id="@+id/taxRateTextView"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/taxRateEditText"
            android:text="@string/eight_percent"
            android:layout_weight="0.5"
            android:maxLength="4" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total"
        android:id="@+id/totalTextView"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/totalEditText"
        android:maxLength="11"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tip_amount"
            android:id="@+id/tipTextView"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/tipEditText"
            android:layout_weight="1"
            android:maxLength="14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tip_percent"
            android:id="@+id/tipPercentTextView"
            android:layout_weight="0.75" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tip_value"
            android:id="@+id/tipAmountTextView"
            android:layout_weight="0.75" />

    </LinearLayout>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipSeekBar"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:progress="15"
        android:max="100"
        android:layout_margin="@dimen/seek_bar_margin"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/grand_total"
        android:id="@+id/grandTextView"
        android:layout_gravity="top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/grandEditText"
        android:maxLength="17"
        android:layout_gravity="right"
        android:inputType="numberDecimal" />

</GridLayout>
